[tool.poetry]
name = "xhsintern"
version = "0.0.1"
description = "Xiaohongshu writing intern"
authors = ["ultrasev"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.28.1"
loguru = "^0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
